添加gradle-8.4-bin.zip防止下载失败

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,13 @@ android {
             minifyEnabled false
         }
     }
+    task wrapper(type: Wrapper){
+        gradleVersion = '8.4'
+    }
+
+    task prepareKotlinBuildScriptModel {
+
+    }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
